Fixed spacing bug between states as well as district info update bug

--- a/css/styling.css
+++ b/css/styling.css
@@ -25,7 +25,7 @@ circle {
 .innerContainer {
     top: 20px;
     margin-top: 40px;
-    margin-left: 100px;
+    margin-left: 150px;
     width: 450px;
     position:relative;
 }
